<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="hu.andras.cardsdemo.ui.highscores.HighScoresViewModel"/>
        <import type="android.view.View"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/no_high_scores_yet"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="@{model.highScoreListEmpty ? View.GONE : View.VISIBLE}"
            android:background="#fff">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rank"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rank"
                    android:gravity="end"
                    android:layout_margin="4dp"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_margin="4dp"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/score"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:gravity="end"
                    android:layout_margin="4dp"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                binding:configureWithAdapter="@{model.adapter}"
                />

        </LinearLayout>

    </FrameLayout>
</layout>
