<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="model" type="hu.andras.cardsdemo.ui.main.dialog.MainDialogViewModel"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{model.title}"
            tools:text="Congratulation! Your score is 40!"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            binding:errorMessage="@{model.validationErrorMessage}"
            android:hint="@string/type_your_name">

            <!-- fixed width is necessarry becuse dialog fragment would compress the layout somehow.
              The number itself doesn't matter the layout will remain inside the screen even with high values-->
            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="@={model.name}"
                android:inputType="text"
                android:textSize="16sp"
                tools:ignore="LabelFor" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="end">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_game"
                android:background="?attr/selectableItemBackground"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:minWidth="10dp"
                android:layout_marginEnd="16dp"
                android:onClick="@{(view) -> model.onNewGameClick()}"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_name"
                android:background="?attr/selectableItemBackground"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:minWidth="10dp"
                android:onClick="@{(view) -> model.onSaveNameClick()}"/>

        </LinearLayout>


    </LinearLayout>
</layout>